--- a/VaterpoloKlub/Views/Treners/Details.cshtml
+++ b/VaterpoloKlub/Views/Treners/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.DatumRodjenja)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DatumRodjenja)
+            @Model.DatumRodjenja.Date.ToString("d")
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
