--- a/VaterpoloKlub/Views/Treners/Edit.cshtml
+++ b/VaterpoloKlub/Views/Treners/Edit.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DatumRodjenja" class="control-label"></label>
-                <input asp-for="DatumRodjenja" class="form-control" />
+                <input asp-for="DatumRodjenja" class="form-control" type="date" />
                 <span asp-validation-for="DatumRodjenja" class="text-danger"></span>
             </div>
             <div class="form-group">
