--- a/VaterpoloKlub/Views/Shared/_Layout.cshtml
+++ b/VaterpoloKlub/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Treners" asp-action="">Treneri</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PrisustvoNaTreningus" asp-action="">Prisustvo</a>
+                        </li>
                     </ul>
                 </div>
             </div>
