fixed primary key on PrisustvoNaTreninzima

--- a/VaterpoloKlub/Views/PrisustvoNaTreningu/Delete.cshtml
+++ b/VaterpoloKlub/Views/PrisustvoNaTreningu/Delete.cshtml
@@ -26,7 +26,8 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="TreningId" />
+        <input type="hidden" asp-for="ClanId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
