--- a/VaterpoloKlub/Views/PrisustvoNaTreningu/Details.cshtml
+++ b/VaterpoloKlub/Views/PrisustvoNaTreningu/Details.cshtml
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
 </div>
