--- a/VaterpoloKlub/Views/PrisustvoNaTreningu/Index.cshtml
+++ b/VaterpoloKlub/Views/PrisustvoNaTreningu/Index.cshtml
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.Clan.ID)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
 }
