--- a/VaterpoloKlub/Views/PrisustvoNaTreningu/Create.cshtml
+++ b/VaterpoloKlub/Views/PrisustvoNaTreningu/Create.cshtml
@@ -16,10 +16,15 @@
                 <label asp-for="TreningId" class="control-label"></label>
                 <select asp-for="TreningId" class ="form-control" asp-items="ViewBag.TreningId"></select>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="ClanId" class="control-label"></label>
                 <select asp-for="ClanId" class ="form-control" asp-items="ViewBag.ClanId"></select>
             </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Prisutan" /> @Html.DisplayNameFor(model => model.Prisutan)
+                </label>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
