--- a/VaterpoloKlub/Views/PrisustvoNaTreningu/Edit.cshtml
+++ b/VaterpoloKlub/Views/PrisustvoNaTreningu/Edit.cshtml
@@ -8,17 +8,41 @@
 
 <h4>PrisustvoNaTreningu</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="TreningId" />
-            <input type="hidden" asp-for="ClanId" />
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+<div>
+    <form method="post">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Ime i Prezime</th>
+                    <th scope="col">Prisutan</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in ViewData["nesto"] as List<PrisustvoNaTreningu>)
+                {
+                    <tr>
+                        <td>@item.Clan.Ime</td>
+                        <td>
+                            @if (item.Prisutan)
+                            {
+                                <div class="form-check">
+                                    <input style="margin:0 auto;" type="checkbox" class="form-check-input" id="@item.ClanId" name="Prisustvo" value="@item.ClanId" checked>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="form-check">
+                                    <input style="margin:0 auto;" type="checkbox" class="form-check-input" id="@item.ClanId" name="Prisustvo" value="@item.ClanId">
+                                </div>
+                            }
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <button class="btn btn-primary">Submit</button>
+    </form>
+    
 </div>
 
 <div>
