--- a/VaterpoloKlub/Views/PrisustvoNaTreningu/Delete.cshtml
+++ b/VaterpoloKlub/Views/PrisustvoNaTreningu/Delete.cshtml
@@ -11,7 +11,7 @@
     <h4>PrisustvoNaTreningu</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Trening)
         </dt>
         <dd class = "col-sm-10">
@@ -23,11 +23,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Clan.ID)
         </dd class>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Prisutan)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Prisutan)
+        </dd>*@
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="TreningId" />
-        <input type="hidden" asp-for="ClanId" />
+        @*<input type="hidden" asp-for="ClanId" />*@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
