--- a/VaterpoloKlub/Views/PrisustvoNaTreningu/Index.cshtml
+++ b/VaterpoloKlub/Views/PrisustvoNaTreningu/Index.cshtml
@@ -12,28 +12,38 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Trening)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Clan)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Prisutan)
+            </th>*@
+            <th>Trening</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in ViewData["Treninzi"] as List<Trening>) {
         <tr>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Trening.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Clan.ID)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.DisplayFor(modelItem => item.Prisutan)
+            </td>*@
+            <td>
+                @item.Id
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
         </tr>
 }
