--- a/VaterpoloKlub/Views/PrisustvoNaTreningu/Index.cshtml
+++ b/VaterpoloKlub/Views/PrisustvoNaTreningu/Index.cshtml
@@ -38,12 +38,12 @@
                 @Html.DisplayFor(modelItem => item.Prisutan)
             </td>*@
             <td>
-                @item.Id
+                @item.ID
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
             </td>
         </tr>
 }
