added crud for testiranje and vjezbe

--- a/VaterpoloKlub/Views/Shared/_Layout.cshtml
+++ b/VaterpoloKlub/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                             </ul>
                         </li>
                         <li><a asp-controller="Clan" asp-action="View">Član</a></li>
+                        <li><a asp-controller="Testiranje">Testiranja</a></li>
                     </ul>
 
                 </div>
