--- a/VaterpoloKlub/Views/Testiranje/Create.cshtml
+++ b/VaterpoloKlub/Views/Testiranje/Create.cshtml
@@ -14,11 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TrenerId" class="control-label"></label>
-                <select asp-for="TrenerId" class ="form-control" asp-items="ViewBag.TrenerId"></select>
+                <select asp-for="TrenerId" class="form-control" asp-items="ViewBag.TrenerId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="DatumTestiranja" class="control-label"></label>
-                <input asp-for="DatumTestiranja" class="form-control" type="date"/>
+                <input asp-for="DatumTestiranja" class="form-control" type="date" />
                 <span asp-validation-for="DatumTestiranja" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -26,6 +26,15 @@
                 <input asp-for="NazivTestiranja" class="form-control" />
                 <span asp-validation-for="NazivTestiranja" class="text-danger"></span>
             </div>
+            @foreach (Vjezba item in ViewData["Vjezbe"] as List<Vjezba>)
+            {
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="@item.Id" id="@item.Id" name="Vjezba">
+                    <label class="form-check-label" for="defaultCheck1">
+                        @item.NazivVjezbe
+                    </label>
+                </div>
+            }
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
