--- a/VaterpoloKlub/Views/RezultatTestiranja/Details.cshtml
+++ b/VaterpoloKlub/Views/RezultatTestiranja/Details.cshtml
@@ -1,36 +1,34 @@
-﻿@model VaterpoloKlub.Models.RezultatTestiranja
+﻿@model VaterpoloKlub.ViewModels.RezultatTestiranjaViewModel
 
 @{
     ViewData["Title"] = "Details";
 }
 
 <h1>Details</h1>
-
+<table class="table table-bordered table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Ime i prezime</th>
+            @foreach (var item in Model.VjezbeTestiranje)
+            {
+                <th scope="col">@item.Vjezba.NazivVjezbe</th>                
+            }
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var clan in Model.Clanovi)
+        {
+            <tr>
+                <th>@(clan.Ime + " " + clan.Prezime)</th>
+                @foreach (var item in clan.RezultatiTestiranja)
+                {
+                    <td>@item.Rezultat</td>
+                }
+            </tr>
+        }
+    </tbody>
+</table>
 <div>
-    <h4>RezultatTestiranja</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Clan)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Clan.ID)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VjezbeTestiranje)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VjezbeTestiranje.TestiranjeId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Rezultat)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Rezultat)
-        </dd>
-    </dl>
-</div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="RezultatTestiranja" asp-action="Edit" asp-route-id="@Model.VjezbeTestiranje[0].TestiranjeId">Edit</a> |
+    <a asp-controller="Testiranje" asp-action="Index">Back to List</a>
 </div>
