--- a/VaterpoloKlub/Views/Shared/_Layout.cshtml
+++ b/VaterpoloKlub/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
                             </ul>
                             
                         </li>
+                        <li class="nav-item">
+                            <a asp-controller="Ekipa" asp-action="Index" class="nav-link">Ekipa</a>
+                        </li>
                     </ul>
 
                 </div>
